posts search and user search with pagination
